<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.andromap33.e_rickshawdrivermode.MainActivity">

        <ImageView
            android:id="@+id/imgLogo"
            android:contentDescription="@string/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/e_rickshaw2" />

        <TextView
            android:id="@+id/d_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/msg"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="52dp"
            android:text="@string/driver_id"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/msg"
            android:layout_below="@id/imgLogo"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@id/msg"
            android:paddingTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

    </RelativeLayout>

</ScrollView>